Archive2/f2/367989e34663e0/output
main.cpp: In instantiation of 'Ptr<T, safety_policy>::operator Ptr<T, target_safety>() const [with target_safety = NotNull; T = int; safety_policy = NoChecking]':
main.cpp:82:32:   required from here
main.cpp:52:5: error: static assertion failed: Safety policy of *this is not implicitly convertible to target's safety policy.
     static_assert( std::is_convertible<const safety_policy&, const target_safety&>::value,  //What is the condition to check? This requires constructibility
     ^
main.cpp: In instantiation of 'Ptr<T, safety_policy>::operator Ptr<T, target_safety>() const [with target_safety = NoChecking; T = int; safety_policy = NotNull]':
main.cpp:83:32:   required from here
main.cpp:52:5: error: static assertion failed: Safety policy of *this is not implicitly convertible to target's safety policy.
